--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,18 @@
 body {
 background-color: grey ;
 }   
-    
+
+#barner{
+
+width: 100%;    
+}
+
 h1 {
 text-align: center;
+height: 150px;
+border: 10px solid #000000;
+padding: 20px;
+margin: 40px; 
 }             
         
 
