--- a/Style.css
+++ b/Style.css
@@ -1,10 +1,15 @@
 body {
-background-color: grey ;
+
 }   
 
 #barner{
 
 width: 100%;    
+}
+
+.descripcion{
+    background-color: grey ;
+    padding: 20px;
 }
 
 h1 {
@@ -17,7 +22,7 @@ margin: 40px;
         
 
 em strong {
-color: #cccccc;
+color: greenyellow;
 }
 
 p{
@@ -29,7 +34,30 @@ text-align: center;
 font-size: 20px;
 }
 
+.diferenciales{
+    background: #ffffff;
+    padding: 30px;
+}
+
+h2{
+    text-align: center;
+}
+
+ul{
+    display: inline-block;
+    vertical-align: top ;
+    width: 20%;
+    margin-right: 15%;
+}
+
 .items{
 font-style: italic;
 
 }
+
+.imagendiferencial{
+width: 40%;
+
+}
+
+
